Feature/google rebased (#18)
* Add google login on ios.

* Configure android google sign in.

* Upload/download to google drive.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">nova</string>
+    <string name="server_client_id">605970674117-k5aln04fmmb7hqcso8l708vd0pbt7c84.apps.googleusercontent.com</string>
 </resources>
