--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Wallet</string>
+    <string name="app_name">Helium Wallet</string>
     <string name="server_client_id">605970674117-k5aln04fmmb7hqcso8l708vd0pbt7c84.apps.googleusercontent.com</string>
     <string name="expo_splash_screen_resize_mode">cover</string>
 </resources>
