remove account percentages (#280)
* remove account percentages from carousel

* Remove percentages and add caching to widget

Co-authored-by: Luis Perrone <peronif5@gmail.com>

--- a/ios/HeliumWalletWidget/en.lproj/Localizable.strings
+++ b/ios/HeliumWalletWidget/en.lproj/Localizable.strings
@@ -18,3 +18,4 @@
 "Wallet_Widget_Send" = "Send";
 "Wallet_Widget_Request" = "Request";
 "Wallet_Widget_Non_Transferable" = "Non Transferable";
+"Wallet_Widget_Mobile_Genesis" = "In Genesis";
