--- a/ios/HeliumWalletWidget/ja.lproj/Localizable.strings
+++ b/ios/HeliumWalletWidget/ja.lproj/Localizable.strings
@@ -18,3 +18,4 @@
 "Wallet_Widget_Send" = "Send";
 "Wallet_Widget_Request" = "Request";
 "Wallet_Widget_Non_Transferable" = "Non Transferable";
+"Wallet_Widget_Mobile_Genesis" = "In Genesis";
